Added first post Project configuration changed

--- a/_config.yml
+++ b/_config.yml
@@ -32,13 +32,12 @@ instafeed: false # To enable the instafeed, use the value true. To turn off use 
 
 #-------------------------------
 # Google Analytics
-google-analytics: # Add your identifier. For example UA-99631805-1.
+google-analytics: UA-165036816-1 # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
 # Newsletter
-mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
-
+mailchimp: rcorchero.us8.list-manage.com/subscribe/post?u=685dacd7d0314a498936952ea&amp;id=9cc042a6fb # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
 
 #-------------------------------
 # Build settings
@@ -47,6 +46,7 @@ permalink: ':title/'
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jemoji
 
 paginate: 5
 paginate_path: "/page/:num"
